fix: html typical

--- a/index.html
+++ b/index.html
@@ -1,75 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="cv" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum vitae</title>
-    <style>
-    </style>
+  <meta charset="utf-8">
+ 
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+ 
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+ 
+  <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
-<body link="red" vlink="#cecece" alink="#ff0000">
-    <header> 
-
-    </header>
-    <link rel = "stylesheet" href = "style.css">
-    <div class="background"></div> 
-    <div class="avatar"></div>
-    <div class="Personalinformation" id="headers">
-        <p><b>Personal information:</b></p>
-    </div>
-    <div class="info">
-    <ul>
-        <li>Andrey Lapitskiy</li>
-        <li>Belarus, Gomel;</li>
-        <li>email: berkut19031999@gmail.com;</li>
-        <li>mobile phone number: 8(044) 549-09-06 (A1);</li>
-        <li><a href="https://vk.com/bbunny19">My VK page</a></li>
-    </ul>
-    </div>
-    <div class="aboutme" id="headers">
-        <p><b>About me</b></p> 
-    </div>
-    <div class="text">
-        <p>‌‌‍‍‌‌‍‍‌‌‍ &#4448;  I am 21 years old, born and raised in Gomel, Belarus.My goal is to find an activity in which<br> 
-         I can realize myself as a person and as a professional.<br> 
-         &#4448;  Strengths: the desire for new things, responsibility, being afraid to try something new for yourself<br>
-         I quickly adapt to new things. I strive to acquire skills for working in the it industry,<br>
-         because I believe that this is what I would like to do in my future life, and when I got to<br> 
-         the RSScool training, I was convinced of this, because I discovered a new exciting world,<br> 
-         and I'm not going to stop there after completing these courses.</p>      
-    </div>
-    <div class="nameskill" id="headers"><p><b>Skills:</b></p></div>
-    <div class="skills">
-        <p> I have completed basic courses in: <b>html; CSS; JS;</b> </p>
-    </div>
-    <div class="education" id="headers"><p><b>Education:</b></p></div>
-    <div class="nameeducation">
-        <ol>
-            <li>
-                <p> I studied at the Gomel Road Construction College,<br> 
-                    majoring in industrial and civil engineering on <br>
-                     a full-time basis;</p>
-            </li>
-            <li>
-                <p> In absentia( from 2019 to 2023):<br>
-                     Belarusian State University of transport </p>
-            </li>
-        </ol>
-        <p><b> &#4448; English language level: A2</b></p>
-    </div>
-    <div class="primer"><p><b>&#4448; &#4448; &#4448;   Code example:</b></p>
-       <pre> <code>
-const getSentenceTone = (sentence) => {
-if (sentence.toUpperCase() === sentence){
-        return 'scream';
-     }
-return 'general';
-    };
-// END
-        </code>
-       </pre>
-    </div>
-    
-    
-    </body>
+ 
+<body>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
