--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
           </div>
            <div class="levelEng">
               <p class="aTho"> A2 </p>
-            <img src="/image/Уровень инглиш.svg" alt="level English" class="smallCircle">                    
+            <img src="/image/УровеньИнглиш.svg" alt="level English" class="smallCircle">                    
           </div>
           <div class="contactList">
               <P id="contact">
                  Contact:
               </P>
-              <img id="iconsHome" src="/image/image 1.png" alt="house">
+              <img id="iconsHome" src="/image/image1.png" alt="house">
                <p class="textContact"> 
                  HOME: <br> Belarus, Gomel;
                </p>
-              <img id="iconsMail" src="/image/image 2.png" alt="mail">
+              <img id="iconsMail" src="/image/image2.png" alt="mail">
                <p class="textContact">
                  EMAIL: <br> berkut19031999@gmail.<br>com; 
                </p>              
-              <img id="iconsPhone" src="/image/image 3.png" alt="phone">
+              <img id="iconsPhone" src="/image/image3.png" alt="phone">
                <p class="textContact">
                 MOBILE PHONE <br> NUMBER: <br> 8(044) 549-09-09 (A1);
                </p>
@@ -46,7 +46,7 @@
                </h1>
           </header>
           <main id="allInfo">
-             <img src="/image/Component 1.svg" alt="line"  id="lineMain">
+             <img src="/image/Component1.svg" alt="line"  id="lineMain">
             <div id="hidingName">
               <h2 class="hidingNameMe" id="aboutMe">
                  ABOUT ME:
@@ -103,6 +103,17 @@
                  </p>                
               </div>
             </div>
-          </main>      
+          </main>
+          <footer id="gitHub">
+            <div id="blockOne">
+              <img src="https://rs.school/images/rs_school_js.svg" alt="RSScool" id="rsShool">
+              <a href="https://rs.school/js/" id="linkJs">RSScool from JS/Front-End</a>
+            </div>
+            <div id="blockTho">
+              <img src="https://www.pngarts.com/files/8/Black-Github-Logo-PNG-Image-Background.png" alt="GitHub" id="iconsHub">
+              <a href="https://github.com/BBunny19" id="bbunny">BBunny19</a>
+            </div>      
+            
+          </footer>      
 </body>
 </html>
