fix: rename img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body id="listPage">
         <nav class="rectanglLeft">                
           <div class="circle">        
-              <img src="/image/Аватарка.png" alt="avatar" class="image">
+              <img src="/image/Ava.png" alt="avatar" class="image">
           </div>
           <div class="textCV">
               <p> I am 23 years old, born and <br> raised in Gomel, Belarus. My <br> goal is to find an activity in <br> which I can realize myself as a <br> person and as a professional.</p>     
@@ -20,7 +20,7 @@
           </div>
            <div class="levelEng">
               <p class="aTho"> A2 </p>
-            <img src="/image/УровеньИнглиш.svg" alt="level English" class="smallCircle">                    
+            <img src="/image/leveleng.svg" alt="level English" class="smallCircle">                    
           </div>
           <div class="contactList">
               <P id="contact">
