fix: images fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body id="listPage">
         <nav class="rectanglLeft">                
           <div class="circle">        
-              <img src="image/Ava.png" alt="avatar" class="image">
+              <img src="Ava.png" alt="avatar" class="image">
           </div>
           <div class="textCV">
               <p> I am 23 years old, born and <br> raised in Gomel, Belarus. My <br> goal is to find an activity in <br> which I can realize myself as a <br> person and as a professional.</p>     
@@ -20,21 +20,21 @@
           </div>
            <div class="levelEng">
               <p class="aTho"> A2 </p>
-            <img src="image/leveleng.svg" alt="level English" class="smallCircle">                    
+            <img src="leveleng.svg" alt="level English" class="smallCircle">                    
           </div>
           <div class="contactList">
               <P id="contact">
                  Contact:
               </P>
-              <img id="iconsHome" src="image/image1.png" alt="house">
+              <img id="iconsHome" src="image1.png" alt="house">
                <p class="textContact"> 
                  HOME: <br> Belarus, Gomel;
                </p>
-              <img id="iconsMail" src="image/image2.png" alt="mail">
+              <img id="iconsMail" src="image2.png" alt="mail">
                <p class="textContact">
                  EMAIL: <br> berkut19031999@gmail.<br>com; 
                </p>              
-              <img id="iconsPhone" src="image/image3.png" alt="phone">
+              <img id="iconsPhone" src="image3.png" alt="phone">
                <p class="textContact">
                 MOBILE PHONE <br> NUMBER: <br> 8(044) 549-09-09 (A1);
                </p>
@@ -46,7 +46,7 @@
                </h1>
           </header>
           <main id="allInfo">
-             <img src="image/Component1.svg" alt="line"  id="lineMain">
+             <img src="Component1.svg" alt="line"  id="lineMain">
             <div id="hidingName">
               <h2 class="hidingNameMe" id="aboutMe">
                  ABOUT ME:
