--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <P id="contact">
                  Contact:
               </P>
-              <img id="iconsHome" src="image/image1.png" alt="house">
+              <img id="iconsHome" src="image1.png" alt="house">
                <p class="textContact"> 
                  HOME: <br> Belarus, Gomel;
                </p>
